--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,15 +13,20 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run-script lint
+      # Checkout local patterns markdown
+      - uses: actions/checkout@v3
+
+      # Install Node and NPM dependencies
+      - name: Use Node.js v18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: v18.x
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run build --if-present
+
+      # Run the linter to validate pattern markdown content
+      - run: npm run-script lint
 
   # Dispatch a release request to the central infrastructure repo
   dispatch-release:
@@ -30,6 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      # User a Github PAT to dispatch a release request to the private infrastructure repo
       - name: Dispatch release request
         run: |
           curl -X POST https://api.github.com/repos/Project-Gretchen/infrastructure/dispatches \
