--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,7 @@
-name: Release
+name: Lint and Preview
 
 on:
-  push:
+  pull_request:
     branches: [ "main" ]
 
 jobs:
@@ -39,6 +39,6 @@ jobs:
           curl -X POST https://api.github.com/repos/Project-Gretchen/infrastructure/dispatches \
           -H "Authorization: token ${GITHUB_TOKEN}" \
           -H "Content-Type: application/json" \
-          --data '{"event_type": "Pattern content update: ${{ github.event.head_commit.message }}", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+          --data '{"event_type": "Pattern PR preview: ${{ github.event.head_commit.message }}", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'", "sha": "'"GITHUB_SHA"'" }}'
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
