--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,6 @@ jobs:
           curl -X POST https://api.github.com/repos/Project-Gretchen/infrastructure/dispatches \
           -H "Authorization: token ${GITHUB_TOKEN}" \
           -H "Content-Type: application/json" \
-          --data '{"event_type": "Pattern content update: ${{ github.event.head_commit.message }}", "client_payload": { }}'
+          --data '{"event_type": "Pattern content update: ${{ github.event.head_commit.message }}"}'
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
