Making curl request fail on HTTP error, for more clarity in the action status

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -36,7 +36,7 @@ jobs:
       # Use a Github PAT to dispatch a release request to the private infrastructure repo
       - name: Dispatch preview request
         run: |
-          curl -X POST https://api.github.com/repos/Project-Gretchen/infrastructure/dispatches \
+          curl --fail -X POST https://api.github.com/repos/Project-Gretchen/infrastructure/dispatches \
           -H "Authorization: token ${GITHUB_TOKEN}" \
           -H "Content-Type: application/json" \
           --data '{"event_type": "Pattern PR preview: ${{ github.event.pull_request.title }}", "client_payload": { "patterns_ref": "'"$GITHUB_SHA"'", "pr_id": "${{ github.event.pull_request.id }}" }}'
