--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,7 +1,7 @@
 name: Validate PR and create preview environment
 
 on:
-  pull_request:
+  pull_request_target:
     branches: [ "main" ]
 
 jobs:
@@ -11,8 +11,11 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      # Checkout local patterns markdown
+      # Checkout the pull request's fork and lint it
       - uses: actions/checkout@v3
+        with:
+          ref: ${{github.event.pull_request.head.ref}}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
 
       # Install Node and NPM dependencies
       - name: Use Node.js v18.x
@@ -39,6 +42,13 @@ jobs:
           curl --fail -X POST https://api.github.com/repos/Project-Gretchen/infrastructure/dispatches \
           -H "Authorization: token ${GITHUB_TOKEN}" \
           -H "Content-Type: application/json" \
-          --data '{"event_type": "Pattern PR preview: ${{ github.event.pull_request.title }}", "client_payload": { "patterns_ref": "'"$GITHUB_SHA"'", "pr_id": "${{ github.event.pull_request.id }}" }}'
+          --data '{ \
+              "event_type": "Pattern PR preview: ${{ github.event.pull_request.title }}", \
+              "client_payload": { \
+                 "patterns_repo": "${{github.event.pull_request.head.repo.full_name}}", \
+                 "patterns_ref": "${{github.event.pull_request.head.ref}}", \
+                 "pr_id": "${{ github.event.pull_request.id }}" \
+              } \
+            }'
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
