--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,11 @@ jobs:
 
   # Dispatch a release request to the central infrastructure repo
   dispatch-release:
+
+    # The release request will fail anyway if a fork tries to run it
+    # because they won't have the right PAT
+    if: github.repository_owner == 'aws-samples'
+
     needs:
       - lint-data
     runs-on: ubuntu-latest
