--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -46,7 +46,7 @@ jobs:
           -H "Content-Type: application/json" \
           --data-binary @- << EOF
             {
-              "event_type": "Pattern PR preview: ${{ github.event.pull_request.title }}",
+              "event_type": "pattern_preview",
               "client_payload": {
                  "patterns_repo": "${{github.event.pull_request.head.repo.full_name}}",
                  "patterns_ref": "${{github.event.pull_request.head.ref}}",
