--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -50,7 +50,7 @@ jobs:
               "client_payload": {
                  "patterns_repo": "${{github.event.pull_request.head.repo.full_name}}",
                  "patterns_ref": "${{github.event.pull_request.head.ref}}",
-                 "pr_id": "${{ github.event.pull_request.id }}"
+                 "pr_id": "${{ github.event.pull_request.id }}",
                  "message": "${{ github.event.pull_request.title }}"
               }
             }
