--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -7,7 +7,7 @@ on:
 jobs:
 
   # First ensure that the contents are valid by running the linter
-  lint-data:
+  lint-and-preview:
 
     runs-on: ubuntu-latest
     steps:
