--- a/.github/workflows/close.yml
+++ b/.github/workflows/close.yml
@@ -11,11 +11,9 @@ jobs:
     if: github.repository_owner == 'aws-samples'
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo PR #${{ github.event.number }} has been closed, can shutdown preview environment
 
-      # Dispatch a preview request to the infrastructure repo
-      # Use a Github PAT to dispatch a release request to the private infrastructure repo
+      # Dispatch a request to close the preview environment
+      # Use a Github PAT to dispatch a request to the private infrastructure repo
       - name: Dispatch close request
         run: |
           curl --fail-with-body -X POST https://api.github.com/repos/Project-Gretchen/infrastructure/dispatches \
