--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,7 @@ jobs:
             {
               "event_type": "pattern_release",
               "client_payload": {
+                 "patterns_repo": "${GITHUB_REPOSITORY}",
                  "message": "Release to production by merge to main"
               }
             }
