--- a/.github/workflows/lint_and_release.yml
+++ b/.github/workflows/lint_and_release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main ]
     paths-ignore:
+      - '.github/workflows/labeler.yml'
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/pull_request-template.md'
       - 'README.md'
@@ -14,6 +15,7 @@ on:
     types: [opened, synchronize, reopened, closed]
     branches: [ main ]
     paths-ignore:
+      - '.github/workflows/labeler.yml'
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/pull_request-template.md'
       - 'README.md'
@@ -38,8 +40,13 @@ jobs:
     needs: [validate]
     runs-on: ubuntu-latest
     outputs:
-      pr-environment: ${{ steps.pr-environment.outputs.environment_id }}
-      prod-environment: ${{ steps.prod-environment.outputs.environment_id }}
+      # Get pull_request/prod environment if trigger is a PR
+      pr-environment: ${{ steps.pr-environment.outputs.environment }}
+      prod-environment: ${{ steps.prod-environment.outputs.environment }}
+
+      # Get pr-id / main if trigger is merge to main
+      pr-environment-id: ${{ steps.pr-environment.outputs.environment_id }}
+      prod-environment-id: ${{ steps.prod-environment.outputs.environment_id }}
     steps:
       - name: Create PR comment
         if: github.event.pull_request.head.ref != ''
@@ -48,6 +55,7 @@ jobs:
           header: ${{ github.run_id }}-PR_RELEASE-${{ github.event.repository.name }}
           number: ${{ github.event.pull_request.number }}
           # GITHUB_TOKEN: ${{ secrets.PAT }}
+          append: true
           message: |
             # ${{ github.event.repository.name }} PR Release triggered by ${{ github.event.pull_request.head.user.login }}
 
@@ -55,24 +63,31 @@ jobs:
 
             🔗 **[Link to Action run](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})**
 
-            Commit ref: ${{ github.event.pull_request.head.ref }} ${{ github.event.pull_request.head.sha }}
+            Commit ref: ${{ github.event.pull_request.head.ref }}
+            Commit sha: ${{ github.event.pull_request.head.sha }}
 
       - name: Set PR Environment ID
         id: pr-environment
         if: github.event_name == 'pull_request' && github.event.action != 'closed'
-        run: echo "environment_id=${{ github.event.repository.name }}-${{ github.event.pull_request.id }}" >> $GITHUB_OUTPUT
+        run: |
+          echo "environment=pull_request" >> $GITHUB_OUTPUT
+          echo "environment_id=${{ github.event.repository.name }}-${{ github.event.pull_request.id }}" >> $GITHUB_OUTPUT
 
       - name: Set Main Environment ID
         id: prod-environment
         if: github.ref == 'refs/heads/main'
-        run: echo "environment_id=main" >> $GITHUB_OUTPUT
+        run: |
+          echo "environment=Production" >> $GITHUB_OUTPUT
+          echo "environment_id=main" >> $GITHUB_OUTPUT
         
   deploy:
     needs: [validate, init-deployment]
     uses: jldeen/infrastructure/.github/workflows/e2e-release.yml@main
-    with: 
-      ENVIRONMENT_ID: ${{ needs.init-deployment.outputs.pr-environment || needs.init-deployment.outputs.prod-environment }}
+    with:
+      ENVIRONMENT: ${{ needs.init-deployment.outputs.pr-environment || needs.init-deployment.outputs.prod-environment }}
+      ENVIRONMENT_ID: ${{ needs.init-deployment.outputs.pr-environment-id || needs.init-deployment.outputs.prod-environment-id }}
       INFRA_REPO: jldeen/infrastructure
+      INFRA_REF: 'main'
       PATTERNS_REPO: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
       PATTERNS_REF: ${{ github.event.pull_request.head.ref || 'main' }}
     secrets: inherit
@@ -101,7 +116,7 @@ jobs:
           number: ${{ github.event.pull_request.number }}
           append: true
           message: |
-            ## 🔗 Preview URL Here: ${{ needs.deploy.outputs.environment_url }}
+            🔗 **[Link to Preview URL](${{ needs.deploy.outputs.environment_url }})**
       
       - name: Update PR comment for failure
         if: needs.validate.result == 'failure' || needs.deploy.result == 'failure'
