test step by step

--- a/.github/workflows/lint_and_release.yml
+++ b/.github/workflows/lint_and_release.yml
@@ -38,14 +38,22 @@ jobs:
           ref: 'main'
           token: ${{ secrets.PAT }}
           path: infrastructure
+  
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name:
+        run: |
+          ls -la
+          ls -la ./infrastrucutre
 
-  validate:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
-    uses: ./infrastructure/.github/workflows/linter.yml
-    with:
-      PR_REPO: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
-      PR_REF: ${{ github.event.pull_request.head.ref || 'main' }}
-    secrets: inherit
+  # validate:
+  #   if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+  #   uses: ./infrastructure/.github/workflows/linter.yml
+  #   with:
+  #     PR_REPO: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
+  #     PR_REF: ${{ github.event.pull_request.head.ref || 'main' }}
+  #   secrets: inherit
 
   # init-deployment:
   #   needs: [validate]
