--- a/.github/workflows/lint_and_release.yml
+++ b/.github/workflows/lint_and_release.yml
@@ -41,11 +41,12 @@ jobs:
   
   test:
     runs-on: ubuntu-latest
+    needs: [checkout]
     steps:
       - name:
         run: |
           ls -la
-          ls -la ./infrastrucutre
+          ls -la ./infrastructure
 
   # validate:
   #   if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
