--- a/pattern/ecs-fargate-apigateway-cloudmap-cdk/files/package.json
+++ b/pattern/ecs-fargate-apigateway-cloudmap-cdk/files/package.json
@@ -38,7 +38,7 @@
     "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.80.0",
+    "aws-cdk": "2.80.0",
     "aws-cdk-lib": "2.80.0",
     "constructs": "10.0.5",
     "eslint": "^8",
@@ -48,26 +48,26 @@
     "jest": "^29.6.1",
     "jest-junit": "^15",
     "jsii": "~5.0.0",
-    "jsii-diff": "^1.84.0",
+    "jsii-diff": "^1.85.0",
     "jsii-docgen": "^9.1.1",
-    "jsii-pacmak": "^1.84.0",
+    "jsii-pacmak": "^1.85.0",
     "jsii-rosetta": "~5.0.0",
     "npm-check-updates": "^16",
-    "projen": "^0.71.138",
+    "projen": "^0.71.141",
     "standard-version": "^9",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-apigatewayv2-alpha": "^2.80.0-alpha.0",
-    "@aws-cdk/aws-lambda-python-alpha": "^2.80.0-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-alpha": "2.80.0-alpha.0",
+    "@aws-cdk/aws-lambda-python-alpha": "2.80.0-alpha.0",
     "aws-cdk-lib": "^2.80.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigatewayv2-alpha": "^2.80.0-alpha.0",
-    "@aws-cdk/aws-lambda-python-alpha": "^2.80.0-alpha.0"
+    "@aws-cdk/aws-apigatewayv2-alpha": "2.80.0-alpha.0",
+    "@aws-cdk/aws-lambda-python-alpha": "2.80.0-alpha.0"
   },
   "keywords": [
     "cdk"
