test with GITHUB TOKEN support

--- a/.github/workflows/lint_and_release.yml
+++ b/.github/workflows/lint_and_release.yml
@@ -34,8 +34,7 @@ jobs:
     with:
       PR_REPO: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
       PR_REF: ${{ github.event.pull_request.head.ref || 'main' }}
-    secrets:
-      PAT: ${{ secrets.FORK }}
+    secrets: inherit
 
   init-deployment:
     needs: [validate]
