test with GITHUB TOKEN support

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -17,3 +17,5 @@ jobs:
         with:
           sync-labels: true
           repo-token: ${{ secrets.FORK }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.FORK }}
