test with GITHUB TOKEN support

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -16,6 +16,6 @@ jobs:
         uses: actions/labeler@v4
         with:
           sync-labels: true
-          repo-token: ${{ secrets.FORK }}
+          # repo-token: ${{ secrets.FORK }}
         env:
           GITHUB_TOKEN: ${{ secrets.FORK }}
