--- a/.github/workflows/lint_and_release.yml
+++ b/.github/workflows/lint_and_release.yml
@@ -34,10 +34,8 @@ jobs:
     with:
       PR_REPO: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
       PR_REF: ${{ github.event.pull_request.head.ref || 'main' }}
-      TEST: ${{ vars.FORK }}
-      
     secrets:
-      PAT: ${{ secrets.FORK }}
+      PAT: ${{ secrets.PAT || github.token }}
 
   init-deployment:
     needs: [validate]
