test with GITHUB TOKEN support

--- a/.github/workflows/lint_and_release.yml
+++ b/.github/workflows/lint_and_release.yml
@@ -21,6 +21,8 @@ on:
       - 'README.md'
       - 'CODE_OF_CONDUCT.md'
       - 'CONTRIBUTING.md'
+  
+  pull_request_target:
 
 permissions:
   pull-requests: write
