--- a/pattern/ecs-fargate-apigateway-cloudmap-cdk/files/package.json
+++ b/pattern/ecs-fargate-apigateway-cloudmap-cdk/files/package.json
@@ -38,7 +38,7 @@
     "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.80.0",
+    "aws-cdk": "2.80.0",
     "aws-cdk-lib": "2.80.0",
     "constructs": "10.0.5",
     "eslint": "^8",
@@ -60,14 +60,14 @@
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-apigatewayv2-alpha": "^2.80.0-alpha.0",
-    "@aws-cdk/aws-lambda-python-alpha": "^2.80.0-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-alpha": "2.80.0-alpha.0",
+    "@aws-cdk/aws-lambda-python-alpha": "2.80.0-alpha.0",
     "aws-cdk-lib": "^2.80.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigatewayv2-alpha": "^2.80.0-alpha.0",
-    "@aws-cdk/aws-lambda-python-alpha": "^2.80.0-alpha.0"
+    "@aws-cdk/aws-apigatewayv2-alpha": "2.80.0-alpha.0",
+    "@aws-cdk/aws-lambda-python-alpha": "2.80.0-alpha.0"
   },
   "keywords": [
     "cdk"
