--- a/pattern/public-facing-web-ecs-fargate-cloudformation/files/service.yml
+++ b/pattern/public-facing-web-ecs-fargate-cloudformation/files/service.yml
@@ -62,8 +62,8 @@ Resources:
           Memory: !Ref ContainerMemory
           Image: !Ref ImageUrl
           PortMappings:
-            - ContainerPort: 80
-              HostPort: 80
+            - ContainerPort: !Ref ContainerPort
+              HostPort: !Ref ContainerPort
           LogConfiguration:
             LogDriver: 'awslogs'
             Options:
@@ -96,7 +96,7 @@ Resources:
       TaskDefinition: !Ref TaskDefinition
       LoadBalancers:
         - ContainerName: !Ref ServiceName
-          ContainerPort: 80
+          ContainerPort: !Ref ContainerPort
           TargetGroupArn: !Ref ServiceTargetGroup
 
   # Security group that limits network access
@@ -117,7 +117,7 @@ Resources:
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 2
       TargetType: ip
-      Port: 80
+      Port: !Ref ContainerPort
       Protocol: HTTP
       UnhealthyThresholdCount: 10
       VpcId: !Ref VpcId
@@ -148,8 +148,6 @@ Resources:
         - !Ref PublicLoadBalancerSG
   PublicLoadBalancerListener:
     Type: AWS::ElasticLoadBalancingV2::Listener
-    DependsOn:
-      - PublicLoadBalancer
     Properties:
       DefaultActions:
         - Type: 'forward'
