--- a/pattern/public-facing-api-ecs-fargate-cloudformation/files/cluster.yml
+++ b/pattern/public-facing-api-ecs-fargate-cloudformation/files/cluster.yml
@@ -25,10 +25,15 @@ Resources:
     Properties:
       AssumeRolePolicyDocument:
         Statement:
-        - Effect: Allow
-          Principal:
-            Service: [ecs-tasks.amazonaws.com]
-          Action: ['sts:AssumeRole']
+          - Effect: Allow
+            Principal:
+              Service: [ecs-tasks.amazonaws.com]
+            Action: ['sts:AssumeRole']
+            Condition:
+              ArnLike:
+                aws:SourceArn: !Sub arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:*
+              StringEquals:
+                aws:SourceAccount: !Ref AWS::AccountId
       Path: /
 
       # This role enables basic features of ECS. See reference:
