--- a/pattern/ecs-ec2-bottlerocket-cluster/files/bottlerocket-updater.yml
+++ b/pattern/ecs-ec2-bottlerocket-cluster/files/bottlerocket-updater.yml
@@ -23,14 +23,16 @@ Resources:
     Type: 'AWS::IAM::Role'
     Properties:
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
-              Service:
-                - 'ecs-tasks.amazonaws.com'
-            Action:
-              - 'sts:AssumeRole'
+              Service: [ecs-tasks.amazonaws.com]
+            Action: ['sts:AssumeRole']
+            Condition:
+              ArnLike:
+                aws:SourceArn: !Sub arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:*
+              StringEquals:
+                aws:SourceAccount: !Ref AWS::AccountId
       Policies:
         - PolicyName: CreateLogGroupPolicy
           PolicyDocument:
@@ -51,13 +53,16 @@ Resources:
       Description: 'Role allowing the Bottlerocket ECS Updater to manage Bottlerocket instances'
       Path: !Sub '/${AWS::StackName}/'
       AssumeRolePolicyDocument:
-        Version: 2012-10-17
         Statement:
           - Effect: Allow
             Principal:
-              Service: 'ecs-tasks.amazonaws.com'
-            Action:
-              - 'sts:AssumeRole'
+              Service: [ecs-tasks.amazonaws.com]
+            Action: ['sts:AssumeRole']
+            Condition:
+              ArnLike:
+                aws:SourceArn: !Sub arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:*
+              StringEquals:
+                aws:SourceAccount: !Ref AWS::AccountId
       Policies:
         - PolicyName: 'BottlerocketEcsUpdaterPolicy'
           PolicyDocument:
